Mon Jul 22 18:01:33 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_enumerate_chars): specify array capa.

Mon Jul 22 17:24:14 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_each_char_size): performance improvement by
	  using rb_str_length().

Mon Jul 22 16:32:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): check by Check_TypedStruct
	  instead of rb_obj_is_kind_of.

Mon Jul 22 13:19:22 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_resize_capa): use RARRAY_RAWPTR() because
	  this code creates no new references.

Mon Jul 22 12:58:18 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_memfill): added.

	* array.c (rb_ary_initialize): use ary_memfill().

	* array.c (rb_ary_fill): ditto.

	* array.c (rb_ary_slice_bang): use RARRAY_RAWPTR() because
	  this code creates no new references.

Mon Jul 22 10:09:46 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_slot_sweep): need to add empty RVALUE as freeobj.

Mon Jul 22 09:48:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (eval_string_with_cref): use the given file name unless
	  eval even if scope is given.  additional fix for [Bug #8436].
	  based on the patch by srawlins at [ruby-core:56099] [Bug #8662].

Mon Jul 22 09:24:19 2013  Kouji Takao  <kouji@takao7.net>

	* ext/readline/readline.c (Init_readline): added
	  Readline.delete_text. [ruby-dev:45789] [Feature #6626]
	* ext/readline/extconf.rb: check for rl_delete_text() in Readline library.

	  Thanks, Nobuyoshi Nakada, for the patch.

Mon Jul 22 03:15:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_parse.c (rfc2822_cb): check if wday is given, since it
	  can be omitted.

Mon Jul 22 00:15:20 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_sq_fast): Refine expressions.

Sun Jul 21 21:08:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Use simple multiplication if yl is small.