@@ -1,3 +1,10 @@
+Mon Jul 22 18:39:52 2013  Masaki Matsushita  <glass.saga@gmail.com>
+
+	* string.c (rb_str_enumerate_chars): specify array capa
+	  with str_strlen().
+
+	* string.c (rb_str_enumerate_codepoints): ditto.
+
 Mon Jul 22 18:01:33 2013  Masaki Matsushita  <glass.saga@gmail.com>
 
 	* string.c (rb_str_enumerate_chars): specify array capa.
